everything.bib is updated due to the NCHS work

--- a/everything.bib
+++ b/everything.bib
@@ -22,6 +22,15 @@
   note =         {Available at http://www.aapor.org/AAPOR{\_}Main/media/MainSiteFiles/TI-Terms-and-Conditions-10-4-17.pdf},
 }
 
+@techreport{aapor:2013:nonprob,
+  title =        {Report of the {AAPOR} Task Force on Non-Probability Sampling},
+  author =       {Reg Baker and Brick, J. Michael and Bates, Nancy A., and Battaglia, M. P. and 
+                  Couper, M. P. and Dever, Jill A. and Gile, Krista J. and Roger Tourangeau},
+  organization = {{AAPOR}},
+  year =         2013,
+  note =         {Available from 
+      https://aapor.org/wp-content/uploads/2022/11/NPS_TF_Report_Final_7_revised_FNL_6_22_13-2.pdf}
+}
 
 @Book{abadir:magnus:2005,
   author    = {Karim M. Abadir and Jan R. Magnus},
@@ -1093,7 +1102,7 @@
           context, giving recommendations for diagnostic plots. A
           plot of smoothed residuals against spatial location, or
           against a spatial covariate, is effective in diagnosing
-          spatial trend or co-variate effects. QñQ-plots of the
+          spatial trend or co-variate effects. Q‚ÄìQ-plots of the
           residuals are effective in diagnosing interpoint
           interaction.},
   doi       = {10.1111/j.1467-9868.2005.00519.x},
@@ -2564,7 +2573,7 @@
        matrices of his estimators depend on the error densities and
        are therefore difficult to estimate reliably. The difficulty
        may be avoided by applying the bootstrap method (Hahn,
-       Econometric Theory 11 (1995) 105ñ121). Calculation of the
+       Econometric Theory 11 (1995) 105‚Äì121). Calculation of the
        estimators, however, requires solving a nonsmooth and
        nonconvex minimization problem, resulting in high
        computational costs in implementing the bootstrap. We propose
@@ -3250,7 +3259,7 @@
           polychoric instrumental variable (PIV) estimator to use in
           structural equation models (SEMs) with categorical observed
           variables. The PIV estimator is a generalization of
-          Bollen's (Psychometrika 61:109ñ121, 1996) 2SLS/IV
+          Bollen's (Psychometrika 61:109‚Äì121, 1996) 2SLS/IV
           estimator for continuous variables to categorical
           endogenous variables. We derive the PIV estimator and its
           asymptotic standard errors for the regression coefficients
@@ -4018,8 +4027,8 @@
           asymptotic properties of a modified density estimator
           introduced in Buskirk (Proceedings of the Survey Research
           Methods Section, American Statistical Association (1998),
-          pp. 799ñ801) and Bellhouse and Stafford (Statist. Sin. 9
-          (1999) 407ñ424); this estimator incorporates both the
+          pp. 799‚Äì801) and Bellhouse and Stafford (Statist. Sin. 9
+          (1999) 407‚Äì424); this estimator incorporates both the
           sampling weights and the kernel weights. We present
           regularity conditions which lead the sample estimator to be
           consistent and asymptotically normal under various modes of
@@ -4368,16 +4377,16 @@
           Modern Perspective, Second Edition has been revamped and
           extensively updated to offer the most comprehensive and
           up-to-date survey of measurement error models currently
-          available. What's new in the Second Edition? ∑ Greatly
+          available. What's new in the Second Edition? ¬∑ Greatly
           expanded discussion and applications of Bayesian
-          computation via Markov Chain Monte Carlo techniques ∑ A
-          new chapter on longitudinal data and mixed models ∑ A
+          computation via Markov Chain Monte Carlo techniques ¬∑ A
+          new chapter on longitudinal data and mixed models ¬∑ A
           thoroughly revised chapter on nonparametric regression and
-          density estimation ∑ A totally new chapter on
-          semiparametric regression ∑ Survival analysis expanded
-          into its own separate chapter ∑ Completely rewritten
-          chapter on score functions ∑ Many more examples and
-          illustrative graphs ∑ Unique data sets compiled and made
+          density estimation ¬∑ A totally new chapter on
+          semiparametric regression ¬∑ Survival analysis expanded
+          into its own separate chapter ¬∑ Completely rewritten
+          chapter on score functions ¬∑ Many more examples and
+          illustrative graphs ¬∑ Unique data sets compiled and made
           available online In addition, the authors expanded the
           background material in Appendix A and integrated the
           technical material from chapter appendices into a new
@@ -4438,6 +4447,17 @@
           when the parametric model fails. We make some simple
           suggestions for modifying the method which improve coverage
           probabilities.}
+}
+
+@article{casella:ghosh:gill:2010:lasso,
+  title={Penalized regression, standard errors, and Bayesian lassos},
+  author={Casella, George and Ghosh, Malay and Gill, Jeff and Kyung, Minjung},
+  journal={Bayesian analysis},
+  volume={5},
+  number={2},
+  pages={369--411},
+  year={2010},
+  publisher={International Society for Bayesian Analysis}
 }
 
 @Article{caudill:zanella:mixon:2000,
@@ -6876,7 +6896,7 @@
       methods that handle survey weights. We then demonstrate the
       performance of various analysis methods using a nationally
       representative data set, the Early Childhood Longitudinal
-      StudyñKindergarten to estimate the effects of preschool on childrenís
+      Study‚ÄìKindergarten to estimate the effects of preschool on children‚Äôs
       academic achievement. The correspondence of the results was evaluated
       using multiple criteria.Results and Conclusions:It is important for
       researchers to think carefully about their estimand of interest and
@@ -7470,7 +7490,7 @@
           block approaches infinity. We use the method to devise a
           new denominator degrees-of-freedom method for fixed-effects
           testing. It is compared to the classical Satterthwaite and
-          KenwardñRoger methods for performance and, more
+          Kenward‚ÄìRoger methods for performance and, more
           importantly, to enhance insight. A key feature of the
           proposed degrees-of-freedom method is that it, unlike the
           others, can be used for non-Gaussian data, too.},
@@ -9502,8 +9522,8 @@ number = {4},
   title     = {Econometric Analysis},
   abstract  = {**** \_Econometric Analysisi, 6/e\_ serves as a bridge
           between an introduction to the field of econometrics and
-          the professional literature for††social scientists and
-          other professionals in the field†of social sciences,
+          the professional literature for¬†¬†social scientists and
+          other professionals in the field¬†of social sciences,
           focusing on applied econometrics and theoretical
           background. This book provides a broad survey of the field
           of econometrics that allows the reader to move from here to
@@ -9792,7 +9812,7 @@ number = {4},
           overparameterization problem. When we define each subject
           as a separate stratum, this model reduces to the shared
           parameter model. Maximum likelihood estimates are obtained
-          using an EM Newtonñ Raphson algorithm. We apply the
+          using an EM Newton‚Äì Raphson algorithm. We apply the
           method to the depression data from the Prevention of
           Suicide in Primary Care Elderly Collaborative Trial
           (PROSPECT). We show when the dropout information is
@@ -10043,7 +10063,7 @@ number = {4},
           be elucidated through stochastic expansions and related
           results. Our approach quantifies the errors that arise
           through statistical approximation, in successive terms of
-          orders \$n^{-1/2}\$, \$n^{-1}\$, \$n^{-3/2}\$, Ö, where n
+          orders \$n^{-1/2}\$, \$n^{-1}\$, \$n^{-3/2}\$, ‚Ä¶, where n
           denotes sample size. The expansions show how spacings among
           eigenvalues impact on statistical performance. The term of
           size \$n^{-1/2}\$ illustrates first-order properties and
@@ -10514,9 +10534,9 @@ number = {4},
   title     = {The robust variance estimator for two-stage models},
   abstract  = {This article discusses estimates of variance for two-stage
           models. We present the sandwich estimate of variance as an
-          alternative to the MurphyñTopel estimate. The sandwich
+          alternative to the Murphy‚ÄìTopel estimate. The sandwich
           estimator has a simple formula that is similar to the
-          formula for the MurphyñTopel estimator, and the two
+          formula for the Murphy‚ÄìTopel estimator, and the two
           estimators are asymptotically equal when the assumed model
           distributions are true. The advantages of the sandwich
           estimate of variance are that it may be calculated for the
@@ -11602,6 +11622,15 @@ number = {4},
   pages     = "765--769"
 }
 
+@article{ibrahim:chen:2000,
+  title={Power prior distributions for regression models},
+  author={Ibrahim, Joseph G and Chen, Ming-Hui},
+  journal={Statistical Science},
+  pages={46--60},
+  volume = 15,
+  year={2000},
+}
+
 @Article{ibra:chen:lips:2001,
   author    = {Ibrahim, Joseph G. and Chen, Ming-Hui and Lipsitz, Stuart
           R.},
@@ -12156,7 +12185,7 @@ number = {4},
           models of SAH. Nevertheless a comparison of estimates -
           based on the balanced sample, the unbalanced sample and
           corrected for non-response using inverse probability
-          weights (IPW) ñ shows that, on the whole, there are not
+          weights (IPW) ‚Äì shows that, on the whole, there are not
           substantive differences in the average partial effects
           (APE) of the variables of interest. The main differences
           are between unweighted and IPW-2 weighted estimates for the
@@ -12766,7 +12795,6 @@ number = {4},
           from the parametric model, but when the `nearest' member of
           the parametric family still satisfies the null hypothesis.
           In general, the likelihood ratio statistic no longer
-          follows an asymptotic chi-squared distribution, and an
           alternative statistic based on the union-intersection
           approach is proposed.},
   doi       = {10.2307/2335849},
@@ -17607,7 +17635,7 @@ survey data to external totals},
 @article{parker:etal:2020:rands12,
   author    = "Parker, Jennifer and Miller, Kristen and He, Yulei and Scanlon, Paul and Cai, Bill and 
                 Shin, Hee-Choon and Parsons, Van and Irimata, Katherine",
-  title     = "Overview and initial results of the National Center for Health Statisticsí 
+  title     = "Overview and initial results of the National Center for Health Statistics‚Äô 
                 Research and Development Survey",
   journal   = "Statistical Journal of the IAOS", 
   volume    = 36, 
@@ -18747,6 +18775,19 @@ in the application of the new methods.},
   volume    = {128}
 }
 
+@article{rafei:flannagan:elliott:2020,
+  title={Big {Data} for finite population inference: 
+  Applying quasi-random approaches to naturalistic driving data 
+  using {B}ayesian additive regression trees},
+  author={Rafei, Ali and Flannagan, Carol A. C. and Elliott, Michael R.},
+  journal={Journal of Survey Statistics and Methodology},
+  volume={8},
+  number={1},
+  pages={148--180},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
 @InCollection{raftery:1993,
   author    = {Adrian Raftery},
   editor    = {Kenneth A Bollen and J Scott Long},
@@ -19501,6 +19542,29 @@ in the application of the new methods.},
   volume    = {37}
 }
 
+@article{reiter:2002,
+  title={Satisfying disclosure restrictions with synthetic data sets},
+  author={Reiter, Jerome P},
+  journal={Journal of Official Statistics},
+  volume={18},
+  number={4},
+  pages={531},
+  year={2002},
+  publisher={Statistics Sweden (SCB)}
+}
+
+@article{reiter:2012:poq,
+  title={Statistical approaches to protecting confidentiality 
+       for microdata and their effects on the quality of statistical inferences},
+  author={Reiter, Jerome P},
+  journal={Public Opinion Quarterly},
+  volume={76},
+  number={1},
+  pages={163--181},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
 @Book{rench:1998,
   author    = "A. C. Rencher",
   year      = 1998,
@@ -19675,7 +19739,18 @@ in the application of the new methods.},
   pages     = {565--574}
 }
 
-@Article{rose:1987,
+@article{rosenbaum:1987,
+  title={Sensitivity analysis for certain permutation inferences in matched observational studies},
+  author={Rosenbaum, Paul R},
+  journal={Biometrika},
+  volume={74},
+  number={1},
+  pages={13--26},
+  year={1987},
+  publisher={Oxford University Press}
+}
+
+@Article{rose:1987:corr,
   author    = {Rosenbaum, Paul R.},
   year      = {1987},
   title     = {Sensitivity analysis for certain permutation inferences in
@@ -22440,7 +22515,7 @@ in the application of the new methods.},
           instrument asymptotic approximations to the case of many
           weak instruments by modeling the number of instruments as
           increasing slowly with the number of observations. It is
-          shown that the resulting î many weak instrumentî
+          shown that the resulting ‚Äù many weak instrument‚Äù
           approximations can be calculated sequentially by letting
           first the sample size, then the number of instruments, tend
           to infinity. The resulting distributions are given for
@@ -22730,6 +22805,17 @@ in the application of the new methods.},
         Estimates From the {R}obert {W}ood {J}ohnson Prescription for Health Projects},
     volume = {10},
     year = {2012}
+}
+
+@article{tibshirani:1996,
+  title={Regression shrinkage and selection via the lasso},
+  author={Tibshirani, Robert},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={58},
+  number={1},
+  pages={267--288},
+  year={1996},
+  publisher={Wiley Online Library}
 }
 
 @Article{tibs:walt:hast:2001,
@@ -25772,11 +25858,6 @@ in the application of the new methods.},
 @article{verbeke:molenberghs:2007,
     abstract = {{The score test presents a number of issues. There are four dimensions of concern: (1) Is the parameter space constrained? (2) Is observed information used, or some form of expected information? (3) Are size and power computed under the null hypothesis, a correctly specified alternative, or a misspecified alternative? (4) Are computations asymptotic or small sample?}},
     author = {Verbeke, Geert and Molenberghs, Geert},
-    citeulike-article-id = {2067625},
-    citeulike-linkout-0 = {http://dx.doi.org/10.1198/000313007x243089},
-    citeulike-linkout-1 = {http://www.ingentaconnect.com/content/asa/tas/2007/00000061/00000004/art00002},
-    citeulike-linkout-2 = {http://www.tandfonline.com/doi/abs/10.1198/000313007X243089},
-    day = {1},
     doi = {10.1198/000313007x243089},
     issn = {0003-1305},
     journal = {The American Statistician},
