minor TeX edits
couple of references added, link to github.io instead of GitHub.com

--- a/everything.bib
+++ b/everything.bib
@@ -6101,6 +6101,17 @@
   address   = {New York}
 }
 
+@article{dean:pagano:2015,
+  title={Evaluating confidence interval methods for binomial proportions in clustered surveys},
+  author={Dean, Natalie and Pagano, Marcello},
+  journal={Journal of Survey Statistics and Methodology},
+  volume={3},
+  number={4},
+  pages={484--503},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
 @Book{deaton:1992,
   author    = "Angus Deaton",
   year      = "1992",
@@ -21731,6 +21742,19 @@ in the application of the new methods.},
   volume    = {33}
 }
 
+
+
+@article{skinner:wakefield:2017,
+  title={Introduction to the design and analysis of complex survey data},
+  author={Skinner, Chris and Wakefield, Jon},
+  journal={Statistical Science},
+  volume={32},
+  number={2},
+  pages={165--175},
+  year={2017},
+  publisher={Institute of Mathematical Statistics}
+}
+
 @ARTICLE{skorohod:1977,
   AUTHOR =       {A. V. Skorohod},
   TITLE =        {On a representation of random variables},
@@ -23963,6 +23987,17 @@ in the application of the new methods.},
     title = {How Much of Interviewer Variance is Really Nonresponse Error Variance?},
     volume = {74},
     year = {2010}
+}
+
+@article{west:sakshaug:aure:2016,
+  title={How big of a problem is analytic error in secondary analyses of survey data?},
+  author={West, Brady T and Sakshaug, Joseph W and Aurelien, Guy Alain S},
+  journal={{PloS} {One}},
+  volume={11},
+  number={6},
+  pages={e0158120},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 
 @Article{white:1978,
