--- a/ichps2023-kolenikov-svy.tex
+++ b/ichps2023-kolenikov-svy.tex
@@ -21,11 +21,11 @@
 \begin{document}
 
 \title{\textbf{Analysis of Complex Health Survey Data}}
-\author[Stas Kolenikov]{Stas Kolenikov \\ @StatStas}
+\author[Stas Kolenikov]{Stas Kolenikov \\ @StatStas@mastodon.online}
 % \date{ICHPS 2023 \\ Conference WiFi: ?? \\ GitHub: https://github.com/skolenik/ICHPS2023-svy }
 \date[ICHPS 2023]{ICHPS 2023
  % \medskip \\ Conference WiFi: Marriott{\_}CONFERENCE; CHSBQT
- \medskip \\ GitHub: https://github.com/skolenik/ICHPS2023-svy }
+ \medskip \\ https://skolenik.github.io/ICHPS2023-svy/ }
 
 \institute[NORC]{NORC \\ \medskip Views and opinions are those of the instructor only, 
     \\ not those of NORC or ASA}
@@ -103,7 +103,9 @@ If the methodology description of your data set contains keywords or phrases lik
 \medskip
 
 \citet{korn:graubard:1999}, \citet{heeringa:west:berglund:2017}, \citet{lumley:2010},
-\citet{chambers:skinner:2003}, \citet{pfeffermann:rao:2009}, \citet{wu:thompson:2020}.
+\citet{chambers:skinner:2003}, \citet{pfeffermann:rao:2009}, \citet{wu:thompson:2020};
+\citet{skinner:wakefield:2017};
+\citet{west:sakshaug:aure:2016}.
 
 \end{frame}
 
@@ -1251,7 +1253,6 @@ Matching the concepts from the $T$ space to the $p$ space:
 Do these make sense? 
 
 \end{frame}
-
 
 \begin{frame}[allowframebreaks]\frametitle{References}
 
